--- a/contact.html
+++ b/contact.html
@@ -4,25 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+ 
 </head>
-    <style>
-        .d {
-            background-color: black;
-            text-align: right;
-            text-decoration: none;
-        }
-        .d a{
-            color: blanchedalmond;
-        }
-        .h1 {
-            text-align: center;
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            font-size: 100px;
-        }
-        .p {
-            text-decoration: none;
-        }
-    </style>
+  
 <body>
     <div class="d">
         <a href="./index.html">home</a>
@@ -34,6 +19,10 @@
         <li>trends@clothy.com</li>
         <li>trends kochi, ernakulam, pin:689531</li>
     </ul>
+    <div class="wow">
+        <h1>SYNNEFO</h1>
+        <p class="wow1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur voluptas esse recusandae. Quisquam eveniet temporibus blanditiis quaerat, quasi commodi incidunt dolor culpa unde? Obcaecati inventore, similique eligendi deleniti cumque doloribus!</p>
+    </div>
     
 </body>
 </html>
